--- a/Includes/Footer.html
+++ b/Includes/Footer.html
@@ -23,7 +23,7 @@
             </li>
             <li>
               <i class="bx bx-envelope"></i>
-              <h5 class="email">eoghanmurphhy@gmail.com</h5>
+              <h5 class="email">eoghanmurphy24@proton.me</h5>
             </li>
             <li>
               <i class="bx bx-map"></i>
@@ -36,26 +36,27 @@
           <h5>Site Links</h5>
           <a href="/Pages/index.html">Home</a>
           <a href="/Pages/About Us.html">About Us</a>
-          <a href="/Pages/Contact Us.html">Grinds</a>
+          <a href="/Pages/bookagrind.html">Grinds</a>
           <a href="/Pages/Courses.html">Courses</a>
           <a href="/Pages/Blog Pages/Landing Page.html">Blog</a>
         </div>
         <div class="col">
           <h5>Other Links</h5>
-          <a href="#">FAQS</a>
+          <!-- <a href="#">FAQS</a> -->
           <a href="#">Privacy Policy</a>
           <a href="#">Terms of Service</a>
           <a href="#">Cookies</a>
-          <a href="#">Support</a>
+          <a href="/Pages/Contact Us.html">Support</a>
+          <a href="/Pages/FAQs.html">FAQs</a>
         </div>
         <div class="col">
           <h5>Collaboration</h5>
-          <a href="#">Work With Us</a>
-          <a href="#">Affiliate</a>
+          <!-- <a href="#">Work With Us</a> -->
+          <a href="/Pages/attributions.html">Attributions</a>
         </div>
         <div class="col last">
           <h5>Sign Up to Our Weekly Newsletter</h5>
-          <p>Hear about our latest Blog and Upcoming Courses/Events!</p>
+          <p>Hear about our latest Blog and Upcoming Courses and Events!</p>
           <div class="form2">
             <form
           action="https://formspree.io/f/mjvndlpa"
@@ -70,17 +71,20 @@
           <button type="submit" class="btn btn-primary">Sign Up</button>
           </div>
 
-          <h5 class="Socialsfooter">Socials</h5>
           <div class="social-links">
-            <a href="#"><i class="bx bxl-instagram"></i></a>
-            <a href="#"><i class="bx bxl-youtube"></i></a>
-            <a href="#"><i class="bx bxl-linkedin-square"></i></a>
+            <h5 class="Socialsfooter">Socials</h5>
+            <div class="socialsboxes">
+              <a href="#"><i class="bx bxl-instagram"></i></a>
+              <a href="#"><i class="bx bxl-youtube"></i></a>
+              <!-- <a href="#"><i class="bx bxl-linkedin-square"></i></a> -->
+            </div>
           </div>
         </div>
       </div>
       <div class="copyright">
-        <img src="/Assets/Images/GRINDS SCHOOL LOGO Final (1) crop.png">
-        <p>Copyright © 2024 Level Up Institute, All Rights Reserved.</p>
+        <img src="/Assets/Images/Footer GRINDS SCHOOL LOGO Final.png">
+        <p>Copyright &copy; 2024 Level Up Institute, All Rights Reserved.</p>
+        <p>Version 1.0.0</p>
       </div>
     </footer>
   </body>
