--- a/Includes/nav.html
+++ b/Includes/nav.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/Assets/CSS/Template.css" />
-    <title>Landing Page | Level Up Institute</title>
+    <title>Home | Level Up Institute</title>
   </head>
   <body>
     <nav>
@@ -17,23 +17,23 @@
           <img src="/Assets/Images/GRINDS SCHOOL LOGO Final (1) crop.png" />
         </div>
         <div class="links">
-          <a href="#">Home</a>
-          <a href="/Pages/Grinds.html">Grinds</a>
+          <a href="/Pages/index.html">Home</a>
+          <a href="/Pages/bookagrind.html">Grinds</a>
           <a href="/Pages/Courses.html">Courses</a>
-          <a href="/Pages/Blog Pages/Blog Landing Page.html">Blog</a>
-          <a href="#">Youtube</a>
+          <a href="/Pages/Blog Pages/Landing Page.html">Blog</a>
+          <!-- <a href="#">Youtube</a> -->
           <a href="/Pages/About Us.html">About Us</a>
           <a href="/Pages/Contact Us.html">Contact Us</a>
         </div>
       </div>
 
-      <div class="buttons">
+      <!-- <div class="buttons">
         <a href="/Other/Support.html"><i class="bx bx-support"></i></a>
         <a href="#"><i class="bx bx-basket"></i></a>
         <a href="/Pages/ASMR Prog - Login Page/login.html"
           ><i class="bx bxs-user"></i
         ></a>
-      </div>
+      </div> -->
     </nav>
   </body>
 </html>
