--- a/Assets/CSS/ContactUs.css
+++ b/Assets/CSS/ContactUs.css
@@ -59,8 +59,9 @@
 }
 
 .contact__aside p {
-  font-size: 0.9rem;
-  margin-bottom: 2rem;
+  font-size: large;
+  margin-bottom: 1rem;
+  text-align: center;
 }
 
 .contact__details li {
@@ -69,6 +70,7 @@
   gap: 1rem;
   align-items: center;
   margin-bottom: 1rem;
+  font-size: large;
 }
 
 .contact__socials {
@@ -79,10 +81,10 @@
 }
 
 .contact__socials a {
-  background: var(--primary-color);
+  background: var(--dark-accent-color);
   padding: 1rem;
   border-radius: 1rem;
-  font-size: 0.9rem;
+  font-size: 1.25rem;
   transition: all 0.3s ease-in-out;
 }
 
@@ -112,13 +114,14 @@
   padding: 1rem;
   border-radius: .5rem;
   background: #BDE1FF; /* Changed background color to a darker shade */
-  color: #fff; /* Ensure the text color is white */
+  color: #000; /* Ensure the text color is white */
 }
 
 .contact__form .btn {
   display: block; /* Change display property to block */
   margin: 0 auto; /* Set margin to auto on left and right */
   background-color: var(--accent-color);
+  border: transparent;
   color: var(--white-color);
   padding: 1rem;
   border-radius: .5rem;
