--- a/Includes/Footer.html
+++ b/Includes/Footer.html
@@ -35,7 +35,7 @@
         <div class="col">
           <h5>Site Links</h5>
           <a href="/Pages/index.html">Home</a>
-          <a href="/Pages/About Us.html">About Us</a>
+          <a href="/Pages/Aboutus.html">About Us</a>
           <a href="/Pages/bookagrind.html">Grinds</a>
           <a href="/Pages/Courses.html">Courses</a>
           <a href="/Pages/Blog Pages/Landing Page.html">Blog</a>
