--- a/Includes/nav.html
+++ b/Includes/nav.html
@@ -22,8 +22,9 @@
           <a href="/Pages/Courses.html">Courses</a>
           <a href="/Pages/Blog Pages/Landing Page.html">Blog</a>
           <!-- <a href="#">Youtube</a> -->
-          <a href="/Pages/About Us.html">About Us</a>
+          <a href="/Pages/Aboutus.html">About Us</a>
           <a href="/Pages/Contact Us.html">Contact Us</a>
+          <a href="/Pages/congrind.html">Book Now</a>
         </div>
       </div>
 
