Changed Nav and Footer for the book now bit

--- a/Includes/Footer.html
+++ b/Includes/Footer.html
@@ -39,6 +39,8 @@
           <a href="/Pages/bookagrind.html">Grinds</a>
           <a href="/Pages/Courses.html">Courses</a>
           <a href="/Pages/Blog Pages/Landing Page.html">Blog</a>
+          <a href="/Pages/congrind.html">Book a Grind</a>
+          <a href="/Pages/wpu.html">Why Pick Us?</a>
         </div>
         <div class="col">
           <h5>Other Links</h5>
