--- a/Includes/nav.html
+++ b/Includes/nav.html
@@ -24,7 +24,7 @@
           <!-- <a href="#">Youtube</a> -->
           <a href="/Pages/Aboutus.html">About Us</a>
           <a href="/Pages/Contact Us.html">Contact Us</a>
-          <a href="/Pages/congrind.html">Book Now</a>
+          <a href="/Pages/congrind.html">Book a Grind</a>
         </div>
       </div>
 
