--- a/Assets/CSS/Template.css
+++ b/Assets/CSS/Template.css
@@ -224,6 +224,7 @@ footer .copyright {
     flex-direction: column;
     align-items: center;
     font-size: 13px;
+    margin-top: 2rem;
 }
 
 .copyright img{
@@ -338,4 +339,5 @@ a:hover {
     footer{
         padding: 60px 30px 30px;
     }
+
 }
