--- a/Includes/Footer.html
+++ b/Includes/Footer.html
@@ -18,8 +18,8 @@
           <h5>Contact Information</h5>
           <ul class="contact_details">
             <li>
-              <i class="bx bxs-phone"></i>
-              <h5>+353 851193536</h5>
+              <!-- <i class="bx bxs-phone"></i>
+              <h5>+353 851193536</h5> -->
             </li>
             <li>
               <i class="bx bx-envelope"></i>
@@ -73,14 +73,14 @@
           <button type="submit" class="btn btn-primary">Sign Up</button>
           </div>
 
-          <div class="social-links">
+          <!-- <div class="social-links">
             <h5 class="Socialsfooter">Socials</h5>
             <div class="socialsboxes">
               <a href="#"><i class="bx bxl-instagram"></i></a>
               <a href="#"><i class="bx bxl-youtube"></i></a>
-              <!-- <a href="#"><i class="bx bxl-linkedin-square"></i></a> -->
+              <a href="#"><i class="bx bxl-linkedin-square"></i></a>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="copyright">
