Legal Pages made

--- a/Includes/Footer.html
+++ b/Includes/Footer.html
@@ -45,9 +45,9 @@
         <div class="col">
           <h5>Other Links</h5>
           <!-- <a href="#">FAQS</a> -->
-          <a href="#">Privacy Policy</a>
-          <a href="#">Terms of Service</a>
-          <a href="#">Cookies</a>
+          <a href="/Pages/Legal/privacypolicy.html">Privacy Policy</a>
+          <a href="/Pages/Legal/TermsofService.html">Terms & Conditions</a>
+          <a href="/Pages/Legal/cookies.html">Cookies</a>
           <a href="/Pages/Contact Us.html">Support</a>
           <a href="/Pages/FAQs.html">FAQs</a>
         </div>
