Getting GitHub Pages to work

--- a/Includes/Footer.html
+++ b/Includes/Footer.html
@@ -34,7 +34,7 @@
         </div>
         <div class="col">
           <h5>Site Links</h5>
-          <a href="/Pages/index.html">Home</a>
+          <a href="/index.html">Home</a>
           <a href="/Pages/Aboutus.html">About Us</a>
           <a href="/Pages/bookagrind.html">Grinds</a>
           <a href="/Pages/Courses.html">Courses</a>
