--- a/Includes/nav.html
+++ b/Includes/nav.html
@@ -17,7 +17,7 @@
           <img src="/Assets/Images/GRINDS SCHOOL LOGO Final (1) crop.png" />
         </div>
         <div class="links">
-          <a href="/Pages/index.html">Home</a>
+          <a href="/index.html">Home</a>
           <a href="/Pages/bookagrind.html">Grinds</a>
           <a href="/Pages/Courses.html">Courses</a>
           <a href="/Pages/Blog Pages/Landing Page.html">Blog</a>
