--- a/Includes/Footer.html
+++ b/Includes/Footer.html
@@ -34,7 +34,7 @@
         </div>
         <div class="col">
           <h5>Site Links</h5>
-          <a href="/index.html">Home</a>
+          <a href="/Pages/index.html">Home</a>
           <a href="/Pages/Aboutus.html">About Us</a>
           <a href="/Pages/bookagrind.html">Grinds</a>
           <a href="/Pages/Courses.html">Courses</a>
@@ -84,7 +84,7 @@
         </div>
       </div>
       <div class="copyright">
-        <img src="/Assets/Images/Footer GRINDS SCHOOL LOGO Final.png">
+        <img src="/Assets/Images/scihublogofooter.png">
         <p>Copyright &copy; 2024 Level Up Institute, All Rights Reserved.</p>
         <p>Version 1.0.0</p>
       </div>
