--- a/Includes/nav.html
+++ b/Includes/nav.html
@@ -14,10 +14,10 @@
     <nav>
       <div class="left">
         <div class="logo">
-          <img src="/Assets/Images/GRINDS SCHOOL LOGO Final (1) crop.png" />
+          <img src="/Assets/Images/Scihublogomain.png" />
         </div>
         <div class="links">
-          <a href="/index.html">Home</a>
+          <a href="/Pages/index.html">Home</a>
           <a href="/Pages/bookagrind.html">Grinds</a>
           <a href="/Pages/Courses.html">Courses</a>
           <a href="/Pages/Blog Pages/Landing Page.html">Blog</a>
