Cleaned up file structure, added a review. Cleaned up CSS file for wpu page.

--- a/Includes/nav.html
+++ b/Includes/nav.html
@@ -8,7 +8,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/Assets/CSS/Template.css" />
-    <title>Home | Level Up Institute</title>
   </head>
   <body>
     <nav>
@@ -17,7 +16,7 @@
           <img src="/Assets/Images/Scihublogomain.png" />
         </div>
         <div class="links">
-          <a href="/Pages/index.html">Home</a>
+          <a href="/index.html">Home</a>
           <a href="/Pages/bookagrind.html">Grinds</a>
           <a href="/Pages/Courses.html">Courses</a>
           <a href="/Pages/Blog Pages/Landing Page.html">Blog</a>
