--- a/Includes/Footer.html
+++ b/Includes/Footer.html
@@ -8,7 +8,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/Assets/CSS/Template.css">
-    <title>Online Educational Landing Page | Level Up Institute</title>
   </head>
 
   <body>
@@ -34,7 +33,7 @@
         </div>
         <div class="col">
           <h5>Site Links</h5>
-          <a href="/Pages/index.html">Home</a>
+          <a href="/index.html">Home</a>
           <a href="/Pages/Aboutus.html">About Us</a>
           <a href="/Pages/bookagrind.html">Grinds</a>
           <a href="/Pages/Courses.html">Courses</a>
